# inference

./: .env.dev  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  run.py
data/model_repository/scrface/: config.pbtxt
data/model_repository/scrface/1/: model.onnx
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.otlp.yml  docker-compose.yml
dev/: docker-compose.yaml
inference/: __init__.py  __main__.py  conftest.py  logging.py  settings.py  utils.py
inference/core/: exceptions.py  interface.py  schemas.py  type_hints.py  validator.py
inference/core/actor/: __init__.py  base.py  exceptions.py  schemas.py  triton.py
inference/core/actor/detector/: __init__.py  scrface.py
inference/core/actor/extractor/: __init__.py  arcface.py
inference/core/engine/: interface.py  schemas.py  triton.py
inference/core/executor/: __init__.py  interface.py  triton.py
inference/core/pipeline/: __init__.py  face.py  interface.py
inference/core/utils/: decorator.py  geometric.py  image.py  iter.py  registry.py
inference/services/: __init__.py
inference/tests/: __init__.py
inference/web/: __init__.py  application.py  lifetime.py
inference/web/api/: __init__.py  router.py
inference/web/api/docs/: __init__.py
inference/web/api/monitoring/: __init__.py
inference/web/utils/: media.py
