[tool.poetry]
name = "inference"
version = "0.1.0"
description = "Python wrapper around triton-inference-server"
authors = ["ptjexio@gmail.com"]
maintainers = ["ptjexio@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
uvicorn = { version = "^0.18.3", extras = ["standard"] }
pydantic = {version = "^1.10.2", extras = ["dotenv"]}
yarl = "^1.8.1"
ujson = "^5.5.0"
anyio = "^3.6.1"
aiofiles = "^22.1.0"
httptools = "^0.5.0"
prometheus-client = "^0.14.1"
prometheus-fastapi-instrumentator = "5.9.1"
opentelemetry-api = "^1.13.0"
opentelemetry-sdk = "^1.13.0"
opentelemetry-exporter-otlp = "^1.13.0"
opentelemetry-instrumentation = "^0.34b0"
opentelemetry-instrumentation-fastapi = "^0.34b0"
loguru = "^0.6.0"
meiga = "^1.2.12"
slowapi = "^0.1.6"
dependency-injector = "^4.39.1"
opencv-python-headless = "^4.6.0.00"
reretry = "^0.11.1"
numpy = "^1.23.4"
pillow = "^9.2.0"
tritonclient = {version = "^2.22.0", extras = ["all"]}
asyncer = "^0.0.1"
nptyping = "^2.3.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
flake8 = "~4.0.1"
mypy = "^0.981"
isort = "^5.10.1"
yesqa = "^1.4.0"
pre-commit = "^2.20.0"
wemake-python-styleguide = "^0.17.0"
interrogate = "^1.5.0"
black = "^22.8.0"
autoflake = "^1.6.1"
pytest-cov = "^4.0.0"
pytest-env = "^0.6.2"
httpx = "^0.23.0"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["inference",]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
